...
    return (
      <SafeAreaView edges={['bottom', 'left', 'right']} className="flex-1 bg-gray-50">
        <StatusBar style="dark" />
        <ModernScreenHeader 
          title={output.form.screenTitle}
          titleNode={(
            <Text testID="update-progress__screen_title" className="text-[28px] leading-8 font-semibold text-[#F8FCFF]">
              {output.form.screenTitle}
            </Text>
          )}
          showBackButton={true}
          onBackPress={handleNavigateBack}
          onNavigateToProfile={props.onNavigateToProfile}
...
